# mylinorobor2

linorobot2/: README.md  README_zh.md
linorobot2/docker/: Dockerfile  docker-compose.yaml  install_sensors.bash  sim.yaml
linorobot2/linorobot2_bringup/: package.xml
linorobot2/linorobot2_bringup/launch/: bringup.launch.py  default_robot.launch.py  extra.launch.py  lasers.launch.py
linorobot2/linorobot2_description/urdf/: 2wd_properties.urdf.xacro  4wd_properties.urdf.xacro  mecanum_properties.urdf.xacro
linorobot2/linorobot2_description/urdf/robots/: 2wd.urdf.xacro  4wd.urdf.xacro  mecanum.urdf.xacro
linorobot2/linorobot2_description/urdf/sensors/: camera.urdf.xacro  depth_sensor.urdf.xacro
linorobot2/linorobot2_gazebo/: CMakeLists.txt  package.xml
linorobot2/linorobot2_gazebo/env-hooks/: linorobot2_gazebo.sh.in
linorobot2/linorobot2_gazebo/launch/: gazebo.launch.py
linorobot2/linorobot2_navigation/config/: navigation.yaml  navigation_sim.yaml
